# Auth-service

./: .dockerignore  .env  Cargo.toml  Dockerfile  Jenkinsfile  README.md  azure-pipelines.yml  build.rs  docker-compose.yaml
migrations/2023-12-21-220737_create_user/: up.sql
protos/: authentication.proto
src/: helpers.rs  main.rs  redis_connection.rs  schema.rs
src/database/: mod.rs  mysql_connection.rs  redis_connection.rs
src/models/: user.rs
tests/: grpc_test.rs
