[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.24.0"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1.0", features = ["mysql"] }
dotenv = { version = "0.15.0" }
tonic = { version = "0.10.2" }
prost = "0.12.3"
bcrypt = "0.15.0"
regex = "1.10.2"
jsonwebtoken = "9.2.0"
serde = { version = "1.0.193", features = ["derive"] }
tonic-reflection = "0.10.2"



[build-dependencies]
tonic-build = { version = "0.10.2", features = [] }
